test_suite/alan-2022-examples/failing/000950_mutation.alan
source KH66 begin boolean C, while WCV; relax end
